[package]
name = "r-ls"
version = "0.1.0"
authors = ["Venkata Jaswanth U <j@everest.engineering>"]
edition = "2018"
description = "hobby ls implementation"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.11"